// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render correctly with name and description 1`] = `
<div
  className="card border-square mt-3 flex-grow-1 mr-3 shadow-on-hover"
  style={
    Object {
      "backgroundColor": "rgba(37,39,41,.01)",
      "minWidth": "350px",
      "textAlign": "center",
    }
  }
>
  <a
    rel="noopener noreferrer"
    style={
      Object {
        "textDecoration": "none",
      }
    }
    target="_blank"
  >
    <div
      className="card-body"
      style={
        Object {
          "color": "rgba(37,39,41)",
          "textDecoration": "none !important",
        }
      }
    >
      <img
        alt="test"
        height="60"
        style={
          Object {
            "borderRadius": "40px",
          }
        }
        width="60"
      />
      <div
        className="mt-2"
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        test
      </div>
      <div
        style={
          Object {
            "fontSize": ".8rem",
          }
        }
      >
        test description
      </div>
    </div>
  </a>
</div>
`;

exports[`Avatar should render correctly with no props 1`] = `
<div
  className="card border-square mt-3 flex-grow-1 mr-3 shadow-on-hover"
  style={
    Object {
      "backgroundColor": "rgba(37,39,41,.01)",
      "minWidth": "350px",
      "textAlign": "center",
    }
  }
>
  <a
    rel="noopener noreferrer"
    style={
      Object {
        "textDecoration": "none",
      }
    }
    target="_blank"
  >
    <div
      className="card-body"
      style={
        Object {
          "color": "rgba(37,39,41)",
          "textDecoration": "none !important",
        }
      }
    >
      <img
        height="60"
        style={
          Object {
            "borderRadius": "40px",
          }
        }
        width="60"
      />
      <div
        className="mt-2"
        style={
          Object {
            "fontWeight": "600",
          }
        }
      />
      <div
        style={
          Object {
            "fontSize": ".8rem",
          }
        }
      />
    </div>
  </a>
</div>
`;
